# Android-DJI-FDSST

./: build.gradle  local.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov4-tiny-person-opt.param
app/src/main/cpp/: CMakeLists.txt  YoloV4.cpp  YoloV4.h  app-lib.cpp  native-lib.cpp
app/src/main/cpp/fdsst/: fhog.cpp  recttools.hpp
app/src/main/cpp/include/opencv2/: cvconfig.h
app/src/main/java/com/dji/FPVDemo/: AppCrashHandler.java  ConnectionActivity.java  DJIApplication.java  DJIMainActivity.java  FPVDemoApplication.java  MApplication.java  MainActivity.java  VideoFeederMainActivity.java
app/src/main/java/com/dji/FPVDemo/customview/: CameraModeView.java  CommonView.java  DetectionModelView.java  LoganUploadView.java  ShowAlbumView.java  TrackingForTouchFrameView.java
app/src/main/java/com/dji/FPVDemo/detection/: ClassifierFromTensorFlow.java  TensorFlowObjectDetectionAPIModel.java
app/src/main/java/com/dji/FPVDemo/detection/tflite/: TFLiteObjectDetectionAPIModel.java
app/src/main/java/com/dji/FPVDemo/enums/: TrackerTypeEnum.java
app/src/main/java/com/dji/FPVDemo/handler/: AppCrashHandler.java
app/src/main/java/com/dji/FPVDemo/interf/: AddOverlayView.java  ConfirmLocationForTensorFlow.java  ConfirmLocationForTracking.java  ConfirmTouchForOverlayView.java  SetRecognitionAlgorithm.java
app/src/main/java/com/dji/FPVDemo/jni/: NativeHelper.java
app/src/main/java/com/dji/FPVDemo/ncnn/: Box.java
app/src/main/java/com/dji/FPVDemo/test/: BuglyMainActivity.java  ButtonAdapter.java  PictureConversionTestActivity.java  RecyclerViewMainActivity.java
app/src/main/java/com/dji/FPVDemo/test/album/: AutoGridView.java  CustomSquareImgView.java  PhotoPreActivity.java  PhotooActivity.java  ShowImagesViewPager.java  ViewPagerAdapter.java
app/src/main/java/com/dji/FPVDemo/test/album/activity/: ImageUrlConfig.java  PreviewPhotoActivity.java  RecyclerViewPictureActivity.java  UserViewInfo.java
app/src/main/java/com/dji/FPVDemo/test/bugly/: BuglyMainActivity.java
app/src/main/java/com/dji/FPVDemo/test/drawclickevents/: DrawSimpleCircleMainActivity.java  MyCircleView.java
app/src/main/java/com/dji/FPVDemo/test/drawerlayout/: CustomSideSlipMenuActivity.java  DrawerLayoutActivity.java  DrawerlayoutNaviMainActivity.java
app/src/main/java/com/dji/FPVDemo/test/imageopencv/: PictureConversionTestActivity.java
app/src/main/java/com/dji/FPVDemo/test/logan/: LoganMainActivity.java  RealSendLogRunnable.java
app/src/main/java/com/dji/FPVDemo/test/ncnn/ncnn4example/: Ncnn4PhotoActivity.java  PhotoUtil.java
app/src/main/java/com/dji/FPVDemo/test/ncnnvulkan/: NcnnMainActivity.java  WelcomeActivity.java  WelcomeNcnnActivity.java
app/src/main/java/com/dji/FPVDemo/test/ncnnvulkan/camera2/: BorderImageView.java  (+3 more)
app/src/main/java/com/dji/FPVDemo/tnn/: FileUtils.java  ImageClassifyUtil.java  ObjectDetectUtil.java  ObjectDetector.java  ObjectInfo.java  Utils.java
app/src/main/java/com/dji/FPVDemo/tracking/: FDSSTResultFormJNI.java  KCFResultFormJNI.java  TrackingResultFormJNI.java
app/src/main/java/com/dji/FPVDemo/utils/: BorderedText.java  CameraSettingUtils.java  CommonUtils.java  DensityUtil.java  ImageUtils.java  LogUtil.java  WriteFileUtil.java  YuvUtils.java
app/src/main/java/com/dji/FPVDemo/utils/dialogs/: CommonDialogFragment.java  DialogFragmentHelper.java  DialogUtils.java  IDialogResultListener.java
app/src/main/java/com/dji/FPVDemo/view/: AutoFitTextureView.java  MultiBoxTracker.java  OverlayView.java  TouchFrameView.java  TouchPaintView.java
app/src/main/java/com/dji/FPVDemo/view/xcslideview/: XCSlideView.java
app/src/main/res/drawable/: bg_cpu_gpu.xml  bg_solid_corner_blue.xml  bg_solid_corner_white_16px.xml  bg_translucent_rounded_corner.xml
app/src/main/res/layout/: activity_bugly_main.xml  activity_camera_main.xml  activity_connection.xml  activity_custom_sideslip_menu.xml  activity_drawer_layout.xml  activity_main2.xml  activity_main_video_feeder.xml  activity_ncnn4_photo.xml  activity_ncnn_main.xml  activity_photo_pre.xml  activity_photoo.xml  activity_preview_photo.xml  activity_recycler_view_main.xml  activity_recycler_view_picture.xml  activity_welcome_ncnn.xml  app_bar_main.xml  custom_dialog_layout.xml  fragment_gallery.xml  fragment_home.xml  fragment_slideshow.xml  include_toolbar.xml  inflater_overlay_view.xml  inflater_touch_frame.xml  item_image_pager.xml  item_layout_camera_mode_view.xml  item_layout_detection_model_view.xml  item_layout_logan_upload.xml  item_layout_slideview.xml  item_layout_tracking_touch_frame.xml  item_test_recyclerview.xml  layout_slideview.xml  layout_slideview_left.xml  lv_iv_item.xml  media_browse_grid_item.xml  media_browse_list_item.xml  nav_header_main.xml  rv_item_image.xml  test_item.xml
app/src/main/res/menu/: menu_drawer_left.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
ncnnlibrary/: CMakeLists.txt  build.gradle
ncnnlibrary/src/androidTest/java/com/example/ncnnlibrary/: ExampleInstrumentedTest.java
ncnnlibrary/src/main/: AndroidManifest.xml
ncnnlibrary/src/main/cpp/: YoloV4.cpp  ncnn_jni.cpp
ncnnlibrary/src/main/java/com/example/ncnnlibrary/: Box.java  NcnnJni.java
ncnnlibrary/src/test/java/com/example/ncnnlibrary/: ExampleUnitTest.java
opcv430android/: build.gradle
tnnlibrary/: build.gradle
tnnlibrary/src/androidTest/java/com/example/tnnlibrary/: ExampleInstrumentedTest.java
tnnlibrary/src/main/: AndroidManifest.xml
tnnlibrary/src/main/assets/: yolov5ssim.opt.tnnproto
tnnlibrary/src/main/cpp/: CMakeLists.txt  imageclassify_jni.cpp  imageclassify_jni.h  object_detector_yolo.cc  object_detector_yolo.h  objectdetector_jni.cpp  objectdetector_jni.h  tnn_sdk_sample.cc  tnn_sdk_sample.h
tnnlibrary/src/main/java/com/example/tnnlibrary/tnn/: ImageClassifyUtil.java  Utils.java
tnnlibrary/src/main/res/values/: strings.xml
tnnlibrary/src/test/java/com/example/tnnlibrary/: ExampleUnitTest.java
(+7 files in other folders)
